# openGL_tutorial

./: CMakeLists.txt  main.cpp
res/shaders/: Basic.shader
